src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Bool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>